--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,17 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.120.4",
-    "@react-three/fiber": "^8.17.10",
+    "@react-three/fiber": "^8.2.2",
     "axios": "^1.7.9",
     "daisyui": "^4.12.22",
+    "framer-motion-3d": "^11.15.0",
     "hamburger-react": "^2.5.2",
     "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.0",
-    "three": "^0.171.0"
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
